<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hard">

    <TextView
        android:id="@+id/xwinstxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="9dp"
        android:text="Four to win"
        app:layout_constraintBottom_toTopOf="@+id/table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turnTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5722"
        android:text="Normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_layout"
        app:layout_constraintVertical_bias="0.148" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/r0"
            style="@style/TableRow">

            <TextView
                style="@style/Cell2.Zero"
                android:layout_marginTop="0dp" />

            <TextView
                style="@style/Cell2.One"
                android:layout_marginTop="0dp" />

            <TextView
                style="@style/Cell2.Two"
                android:layout_marginTop="0dp" />

            <TextView
                style="@style/Cell2.Three"
                android:layout_marginTop="0dp" />

            <TextView
                style="@style/Cell2.Four"
                android:layout_marginTop="0dp" />
        </TableRow>

        <TableRow
            android:id="@+id/r1"
            style="@style/TableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView style="@style/Cell2.Zero" />

            <TextView style="@style/Cell2.One" />

            <TextView style="@style/Cell2.Two" />

            <TextView style="@style/Cell2.Three" />

            <TextView style="@style/Cell2.Four" />

        </TableRow>

        <TableRow
            android:id="@+id/r2"
            style="@style/TableRow">

            <TextView style="@style/Cell2.Zero" />

            <TextView style="@style/Cell2.One" />

            <TextView style="@style/Cell2.Two" />

            <TextView style="@style/Cell2.Three" />

            <TextView style="@style/Cell2.Four" />

        </TableRow>

        <TableRow
            android:id="@+id/r3"
            style="@style/TableRow">

            <TextView style="@style/Cell2.Zero" />

            <TextView style="@style/Cell2.One" />

            <TextView style="@style/Cell2.Two" />

            <TextView style="@style/Cell2.Three" />

            <TextView style="@style/Cell2.Four" />

        </TableRow>

        <TableRow
            android:id="@+id/r4"
            style="@style/TableRow">

            <TextView
                style="@style/Cell2.Zero"
                android:layout_marginBottom="0dp" />

            <TextView
                style="@style/Cell2.One"
                android:layout_marginBottom="0dp" />

            <TextView
                style="@style/Cell2.Two"
                android:layout_marginBottom="0dp" />

            <TextView
                style="@style/Cell2.Three"
                android:layout_marginBottom="0dp" />

            <TextView
                style="@style/Cell2.Four"
                android:layout_marginBottom="0dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/turnTextView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn"
        android:textSize="64sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:backgroundTint="#FF5722"
        android:text="@string/resetButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_layout"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/Timertxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="143dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_layout"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/Xwinstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="128dp"
        android:text="@string/Crosswins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Owinstxt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/Owinstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:text="@string/Naughtwins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButton"
        app:layout_constraintVertical_bias="0.151" />

</androidx.constraintlayout.widget.ConstraintLayout>